Bug 150557 - FILEOPEN PPTX: table shadows missing cell colors (or rather colors are extremely faint)
Summary: FILEOPEN PPTX: table shadows missing cell colors (or rather colors are extrem...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.3.5.2 release
Hardware: All All
: medium normal
Assignee: Sarper Akdemir (allotropia)
URL:
Whiteboard: target:24.2.0 target:7.6.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: ImpressDraw-Tables
  Show dependency treegraph
 
Reported: 2022-08-23 08:22 UTC by Gerald Pfeifer
Modified: 2023-10-01 23:17 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Visual comparison Office 365 (left) vs LibreOffice (right) (156.55 KB, image/png)
2022-08-23 08:22 UTC, Gerald Pfeifer
Details
Visual comparison Office 365 (left) vs LibreOffice (right) - attachment 171332 of bug #129961 (314.37 KB, image/png)
2022-08-23 08:53 UTC, Gerald Pfeifer
Details
Sample ODP showing the problem (28.70 KB, application/vnd.oasis.opendocument.presentation)
2022-08-23 11:13 UTC, Rafael Lima
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Pfeifer 2022-08-23 08:22:42 UTC
Created attachment 181973 [details]
Visual comparison Office 365 (left) vs LibreOffice (right)

Attachment 175185 [details] from bug #144091 no longer shows table shadows in
color, or at least the color is extremely faint (see attached screenshot).

This is a regression in Version: 7.5.0.0.alpha0+ / LibreOffice Community
  Build ID: 46dc9f3bbac67e9240adc44ab017f905482ef786
  CPU threads: 8; OS: Linux 5.19; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US

and on the 7.3 branch Version: 7.3.6.0.0+ / LibreOffice Community
  Build ID: d484e8ba447de90fd77d0244a2cda1400bbe6232
  CPU threads: 8; OS: Linux 5.19; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US

whereas  Version: 7.2.8.0.0+ / LibreOffice Community
  Build ID: d293877ff029ae7c161ccfbade992485fd92fe75
  CPU threads: 8; OS: Linux 5.19; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US
  TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:libreoffice-7-2, Time: 2022-04-26_20:29:27

has this right.


(This appears distinctly different from bug #150048.)

Timur, I'm copying you since you have been a great help regarding
similar issues in this area and my summary perhaps could use some
better wording?
Comment 1 Gerald Pfeifer 2022-08-23 08:53:52 UTC
Created attachment 181974 [details]
Visual comparison Office 365 (left) vs LibreOffice (right) - attachment 171332 [details] of bug #129961

Timur's testcase from attachment 171332 [details] of bug #129961 also shows this
issue.

(As you can see in attachment #174555 [details] of bug #144091, LibreOffice already
showed colors much stronger at one point, so this is flip-flopping from
no color to too strong to okay to now too faint.)
Comment 2 Rafael Lima 2022-08-23 11:00:15 UTC
I can reproduce this issue with

Version: 7.3.5.2 / LibreOffice Community
Build ID: 30(Build:2)
CPU threads: 12; OS: Linux 5.15; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Ubuntu package version: 1:7.3.5-0ubuntu0.22.04.1
Calc: threaded

It seems the borders in attachment #174555 [details] are indeed too faint considering that they are using 0% transparency. Opening the same file in 7.2.7 results in a shadow that IMO is more coherent with 0% transparency.

This issue is also reproducible in:

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 641d92a73e5b3d0e062e16ed4b42236e1a4796a5
CPU threads: 12; OS: Linux 5.15; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: CL
Comment 3 Rafael Lima 2022-08-23 11:13:37 UTC
Created attachment 181975 [details]
Sample ODP showing the problem

Now take a look at this sample ODP file. It seems there is an interaction between shadow rendering and cell background color. The shadow problem only appears when you set cell color to None.

The table on the left uses the color White as background color and the shadow has 0% transparency.

The table on the right is an exact copy of the first table, but I changed cell background to "None". This caused the shadow to become faint.
Comment 4 stragu 2022-12-13 23:29:18 UTC
This most likely has to do with the work Miklos did on table shadows for LO 7.3: https://vmiklos.hu/blog/sd-table-transparent-shadow.html

I can do a proper bibisect when I get some time.
Comment 5 stragu 2023-01-21 10:56:16 UTC
Using attachment 181975 [details] and repo linux-64-7.3, I bibisected to first bad commit 796e5e0a19bce4aa6c830b51c0640b2d769729fe which points to core commit:

commit 7eb4f92ed90e13ce5cbf7286fae623770e71324c
author	Gülşah Köse <gulsah.kose@collabora.com>	Thu May 26 11:03:41 2022 +0300
committer	Gülşah Köse <gulsah.kose@collabora.com>	Mon Jun 06 09:38:32 2022 +0200
tree e27fd5b91b8f9041959cdcfd1c5597ad9fa91ce5
parent 57cd4735a7312174e63d2a1a3dd3831443169530
tdf#136787 Add control to create 1-bit B&W bitmap while creating mask.
Glow effect creates half transparent pixels on shadow. Creating 1-bit
B&W bitmap mask treates that half transparent pixels as black.
We control 1-bit B&W bitmap creation when we have half transparent
pixels.
Change-Id: Iaf298a0e5ffeeb6637fe5d3f56cf4f8e30a203e4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/134981

I verified that it was the right commit with attachment 175185 [details] too.

Gülşah, can you please have a look?
Comment 6 Commit Notification 2023-09-05 11:21:21 UTC
Sarper Akdemir committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/98319164284c4a25d6a2313e6b8a35d244d94e91

tdf#150557: svx: don't factor in transparence twice for cell shadows

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Sarper Akdemir (allotropia) 2023-09-05 11:26:33 UTC
The issue Gerald mentioned should be resolved with 98319164284c4a25d6a2313e6b8a35d244d94e91. However, the problem/concern Rafael raised about border shadows in comment #2 seems to be unrelated.
Comment 8 Commit Notification 2023-09-05 20:06:17 UTC
Sarper Akdemir committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/300dc54b0424add2dbab5443dcbd46ba12f418fc

related tdf#150557: fix unified transparence initialization with alpha

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Xisco Faulí 2023-09-06 08:29:40 UTC
(In reply to Sarper Akdemir (allotropia) from comment #7)
> The issue Gerald mentioned should be resolved with
> 98319164284c4a25d6a2313e6b8a35d244d94e91. However, the problem/concern
> Rafael raised about border shadows in comment #2 seems to be unrelated.

@Rafael, could you please create a follow-up ticket ?
Comment 10 Xisco Faulí 2023-09-06 09:12:12 UTC
Verified in

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 13de5fc5396db63d4bd2f3e5fb4dc66c7ddd601f
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

@Sarper, thanks for fixing this issue!!
Comment 11 Commit Notification 2023-09-06 09:23:33 UTC
Sarper Akdemir committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/d9cd1fe49bd4cf32257508adab11f16f7a4a88f1

tdf#150557: svx: don't factor in transparence twice for cell shadows

It will be available in 7.6.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2023-09-06 10:33:50 UTC
Sarper Akdemir committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/b345df89663a3a69ad55ed80ad9a6cc942786f92

related tdf#150557: fix unified transparence initialization with alpha

It will be available in 7.6.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2023-09-06 10:42:53 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a06c580643ebcca37f0baac009534fd826602966

related: tdf#150557: improve test a bit

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Rafael Lima 2023-10-01 23:17:59 UTC
It took me some time, but here's the follow-up ticket for the issue in comment #3 (which is still present in master).

https://bugs.documentfoundation.org/show_bug.cgi?id=157549